# cicd_workshop_lab2_ailsa

./: README.md  pyproject.toml
.github/workflows/: pyproject.toml  qa.yaml  qa.yaml.backup
tests/: test_maths_utils.py
useful_package/: math_utils.py
