[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "useful-package"
version = "0.1.0"
description = "Simple example package"
authors = [
  { name = "Data Scientist" }
]
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["tests"]

[tool.ruff]
exclude = [
    "tests",
    "*/tests/*",
]

[tool.ruff.lint]
extend-select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "ARG", # unused arguments
    "PTH", # use pathlib
    "RUF", # Ruff-specific rules
    "PL",  # pylint rules
    "S",   # security
    "T",   # Type hints
    # "D",   # Docstring style
    "COM", # Complexity checks
    "PYI", # stub file checks
]

ignore = []

unfixable = ["B"]
